# codetyper.nvim

./: .gitignore  .luacheckrc  AGENT_SYSTEM.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION_TASKS.md  Plan.md  README.md  llm.txt  llms.txt  migration_plan.md
.github/workflows/: lua.yaml  release.yaml
agent/: __init__.py  context.py  formatter.py  intent.py  main.py  planner.py  protocol.py  pyproject.toml  schemas.py  validator.py
agent/memory/: __init__.py  graph.py  learners.py  storage.py
agent/prompts/: __init__.py  edit.py  intent.py  system.py
doc/: codetyper.txt  tags
docs/: agent-system.md  contributing.md
lua/codetyper/: ask.lua  autocmds.lua  chat_switcher.lua  commands.lua  completion.lua  config.lua  cost.lua  credentials.lua  gitignore.lua  health.lua  init.lua  inject.lua  logs_panel.lua  parser.lua  preferences.lua  tree.lua  types.lua  utils.lua  window.lua
plugin/: codetyper.lua
scripts/: create_support_files.sh
tests/: minimal_init.lua  run_tests.sh
tests/agent/: test_intent.py  test_planner.py  test_protocol.py  test_validator.py
tests/spec/: agent_tools_spec.lua  agentic_spec.lua  ask_intent_spec.lua  brain_delta_spec.lua  brain_hash_spec.lua  brain_learners_spec.lua  brain_memory_spec.lua  brain_node_spec.lua  brain_storage_spec.lua  coder_context_spec.lua  coder_ignore_spec.lua  confidence_spec.lua  config_spec.lua  imports_spec.lua  indexer_spec.lua  inject_spec.lua  inline_agent_spec.lua  intent_spec.lua  llm_selector_spec.lua  llm_spec.lua  logs_spec.lua  memory_spec.lua  middleware_spec.lua  parser_spec.lua  (+10 more)
(+432 files in other folders)
